spacing issues fixed in projects.html

--- a/styles/projects-styles.css
+++ b/styles/projects-styles.css
@@ -33,7 +33,6 @@
     border: 1px solid grey;
     border-radius: 15px;
     margin: 20px auto;
-    height: 750px;
 }
 
 .project-div .card{
@@ -46,6 +45,7 @@
 
 .project-div .card-img-top{
     transition: 0.5s;
+    height: 300px;
 }
 
 .card-img-top:hover{
@@ -58,7 +58,7 @@
     box-shadow: 0 -2px 20px rgba(0, 0, 0, 1);
     top: -10px;
     right: 10px;
-    background-color: deepskyblue;
+    background-color: rgb(9, 164, 211);
     padding: 5px 7px;
 }
 
@@ -103,5 +103,9 @@
 
     .ongoing-project-div{
         font-size: 80%;
+    }
+
+    .project-div .card-img-top{
+        height: 200px;
     }
 }
